fix(modals): z-index and overflow

--- a/src/Components/FormComponents/Select/select.module.scss
+++ b/src/Components/FormComponents/Select/select.module.scss
@@ -56,7 +56,7 @@
   box-shadow: var(--effect-shadow-m-center);
   border-radius: var(--border-radius-m);
   background-color: var(--color-white);
-  z-index: 1;
+  z-index: 2;
 }
 .menu::-webkit-scrollbar{
   width: 16px;
