--- a/src/Components/Modal/modal.module.scss
+++ b/src/Components/Modal/modal.module.scss
@@ -8,6 +8,9 @@
   justify-content: center;
   align-items: center;
   border: none;
+  //max-height: 100vh;
+
+
 }
 .modal.isOpen{
   visibility: visible;
@@ -28,26 +31,64 @@
   position: fixed;
   top: 0;
   left: 0;
-  backdrop-filter: blur(10px);
-  background-color: rgb(0 0 0 / 50%);
+  backdrop-filter: blur(5px);
+  background-color: rgb(0 0 0 / 40%);
   width: 100%;
-  height: 100%;
+  height: 100vh;
+
+  padding: 40px;
+  align-items: center;
+  overflow-y: hidden;
+
+}
+.modal.windowMode.isOpen .forScroll{
+  box-sizing: border-box;
+  overflow-y: auto;
+  max-height: 100%;
+  overflow-x: hidden;
+  display: flex;
+  justify-content: center;
+  //padding: 8px;
+
+  border-radius: var(--border-radius-m);
+
+
+  background-color: var(--color-white);
+}
+.forScroll::-webkit-scrollbar{
+  width: 16px;
+}
+.forScroll::-webkit-scrollbar-track{
+  border-radius: var(--border-radius-m);
+}
+.forScroll::-webkit-scrollbar-thumb{
+  border-radius: var(--border-radius-m);
+  border: transparent solid 4px;
+  background-clip: padding-box;
+}
+
+.modal.windowMode.isOpen .window{
+  width: 408px;
+  flex-grow: 0;
+  background-color: var(--color-white);
+
 }
 
 .window{
-  position: relative;
+  //position: relative;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  max-height: 55vh;
+  //max-height: 55vh;
   flex-grow: 2;
 
   //width: 408px;
   background-color: var(--color-white);
   border-radius: var(--border-radius-m);
-  overflow: auto;
+  //overflow: auto;
   box-shadow: var(--effect-shadow-l-center);
 }
+
 
 .header{
   display: flex;
@@ -57,7 +98,8 @@
   padding: 20px;
   border-bottom: var(--border-grey-100-medium);
   background-color: var(--color-white);
-  border-radius: var(--border-radius-m);
+  border-top-right-radius: var(--border-radius-m);
+  border-top-left-radius: var(--border-radius-m);
 }
 
 .title{
@@ -94,6 +136,8 @@
 .content{
   flex-grow: 2;
   padding: 4px 20px;
+  border-radius: var(--border-radius-m);
+
   //overflow-y: auto;
 }
 
@@ -106,6 +150,21 @@
   padding: 20px;
   border-top: var(--border-grey-100-medium);
   background-color: var(--color-white);
-  border-radius: var(--border-radius-m);
+  border-bottom-left-radius: var(--border-radius-m);
+  border-bottom-right-radius: var(--border-radius-m);
+
+}
+
+.windowMode .header{
+  position: sticky;
+  top: 0;
+  z-index: 1;
+}
+.windowMode .footer{
+  position: sticky;
+  bottom: 0;
+  z-index: 1;
+  border-top-right-radius: 0;
+  border-top-left-radius: 0;
 
 }
